--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "car-doctor-pro",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.15"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
-  }
+   "name": "car-doctor-pro",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "bcrypt": "^5.1.1",
+      "jsonwebtoken": "^9.0.2",
+      "mongodb": "^6.9.0",
+      "next": "14.2.15",
+      "next-auth": "^4.24.8",
+      "react": "^18",
+      "react-dom": "^18",
+      "react-icons": "^5.3.0",
+      "react-spinners": "^0.14.1",
+      "react-toastify": "^10.0.6",
+      "sweetalert2": "^11.14.3",
+      "swiper": "^11.1.14"
+   },
+   "devDependencies": {
+      "daisyui": "^4.12.13",
+      "eslint": "^8",
+      "eslint-config-next": "14.2.15",
+      "postcss": "^8",
+      "tailwindcss": "^3.4.1"
+   }
 }
